// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions reinicia juego 1`] = `
Object {
  "type": "RESET",
}
`;

exports[`actions selecciona casillas 1`] = `
Object {
  "turno": "X",
  "type": "SELECT",
  "x": 0,
  "y": 0,
}
`;

exports[`actions selecciona casillas 2`] = `
Object {
  "turno": "X",
  "type": "SELECT",
  "x": 0,
  "y": 1,
}
`;

exports[`actions selecciona casillas 3`] = `
Object {
  "turno": "X",
  "type": "SELECT",
  "x": 0,
  "y": 2,
}
`;

exports[`actions selecciona casillas 4`] = `
Object {
  "turno": "X",
  "type": "SELECT",
  "x": 1,
  "y": 0,
}
`;

exports[`actions selecciona casillas 5`] = `
Object {
  "turno": "X",
  "type": "SELECT",
  "x": 1,
  "y": 1,
}
`;

exports[`actions selecciona casillas 6`] = `
Object {
  "turno": "X",
  "type": "SELECT",
  "x": 1,
  "y": 2,
}
`;

exports[`actions selecciona casillas 7`] = `
Object {
  "turno": "X",
  "type": "SELECT",
  "x": 2,
  "y": 0,
}
`;

exports[`actions selecciona casillas 8`] = `
Object {
  "turno": "X",
  "type": "SELECT",
  "x": 2,
  "y": 1,
}
`;

exports[`actions selecciona casillas 9`] = `
Object {
  "turno": "X",
  "type": "SELECT",
  "x": 2,
  "y": 2,
}
`;
